# aws-iot-core-mqtt-python-client-sample

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .python-version  README.md  pyproject.toml  sample-publisher.py  sample-subscriber.py  test.py
aws_iot_core_mqtt_python_client_sample/: sample_publisher.py  sample_subscriber.py
